--- a/stylee.css
+++ b/stylee.css
@@ -1,91 +1,78 @@
-{
-  box-sizing: border-box;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 body{
-background-color:rgb(51,232,255);
+    font-family: sans-serif;
 }
-
-
-h1 {
-	font-size: 27px;
-	font-family: Georgia serif;
-	text-align: center;
-	color: rgb(0, 0, 0);
-	margin-bottom: 30px;
+.container{
+    
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns:repeat(3 , 1fr);
+    grid-gap:20px;
+    
+}
+h1{
+    margin-top: 10px;
+    text-align: center;
+    text-decoration: underline;
+}
+h3{
+    margin-left: 200px;
+    background-color: rgb(228, 139, 37);
 
 }
-
-p {
-	padding: 15px 5px 0px 5px;
-	font-family: Georgia sans-serif;
-	font-size: 16px;
-	position: relative;
+section{
+    background-color: gray;
+    margin-top: 2rem;
+    width: 25rem;
+    line-height: 1.5rem;
 }
-
-.section { 
-	background-color: rgb(150, 150, 150);
-   	border: 2px solid black;
-   	margin-top: 20px; 
-   	margin-right: 20px; 
-   	padding: 3px;
-   	text-align: justify;
-   	position: relative;
- }
-
-span {
-	font-size: 20px;
-	width: 150px;
-	border: 1px solid black;
-	font-weight: bold;
-	text-align: center;
-float: right; top :0; right: 0; margin: 0;
-	position: absolute;
+#s1{
+    margin-left: 20px;
 }
-#pp1 {
-	background-color: rgb(250, 150, 150);
-	color: rgb(0, 0, 0);
-}
-#pp2 {
-	background-color: rgb(250, 0, 0);
-	color: rgb(250, 250, 250);
-}
-#pp3 {
-	background-color: rgb(200, 200, 100);
-	color: rgb(0, 0, 0);
-}
-}
+@media only screen and (max-width: 991px){
+    .container{
+        font-size: 15px;    
+        margin: 0rem auto;
+        display: grid;
+        grid-template-columns:repeat(2 , 3fr);
+        grid-gap:20px;
+        margin-left:20px;
+        
+        text-align: center;
 
-.row {
-	width: 100%;
+    }
+    h1{
+        margin-top: 2rem;
+        text-align: center;
+    }
+    #s2{
+        margin-right: 40px;
+    }
+    #s3{
+       width: 25rem;
+    }
 }
-
-/*  PC view */
-
-@media (min-width: 992px) {
-
-  .col-lg-4 {
-    width: 33.33%;
-    float: left;
-	}
+@media only screen and (max-width: 768px) {
+    .container{
+        font-size: 15px;    
+        margin: 0rem auto;
+        display: grid;
+        grid-template-columns:100%;
+        
+    }
+    section{
+        width: 23rem !important;
+       
+    }
+    h1{
+        margin-top: 2rem;
+        text-align: center;
+    }
+    #s1{
+        margin-left: 0px;
+    }
 }
-
-/* Tablet view */
-@media (min-width: 768px) and (max-width: 991px) {
-
-  .col-md-6 {
-    width: 50%;
-    float: left;
-  }
-  .col-md-12 {
-    width: 100%;
-    float: left;
-  }
-}
-/*for very small screens or mobile devices */
-@media (max-width: 767px)  {
-
-  .col-sx-12 {
-  	float: left;
-    width: 100%;
-  }
-} 
